--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
     />
     <link rel="stylesheet" href="./src/styles/main.css" />
+    <script type="module" src="./src/js/main.js"></script>
     <title>넷플렉스</title>
   </head>
   <body></body>
