--- a/index.html
+++ b/index.html
@@ -12,5 +12,37 @@
     <script type="module" src="./src/js/main.js"></script>
     <title>넷플렉스</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="schedule">
+        <div class="schedule__header">
+          <h2 class="schedule__title">My 일정</h2>
+          <div class="schedule__show-all">
+            <a
+              href="#"
+              class="schedule__show-all-btn"
+              aria-label="전체 일정 보기"
+            >
+              Show All
+              <svg
+                class="schedule__show-all-icon"
+                aria-hidden="true"
+                width="15"
+                height="15"
+                viewBox="0 0 15 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M4.6875 3.38086L5.29395 2.8125L10.3125 7.5L5.29395 12.1875L4.6875 11.6221L9.09668 7.5L4.6875 3.38086Z"
+                  fill="black"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+        <ul class="schedule__day-list"></ul>
+      </section>
+    </main>
+  </body>
 </html>
