--- a/src/pages/schedule-page/schedule-page.html
+++ b/src/pages/schedule-page/schedule-page.html
@@ -78,6 +78,131 @@
         </form>
       </dialog>
 
+      <!-- 캘린더 모달 -->
+      <dialog id="calendarDialog" class="calendar-dialog">
+        <form method="dialog" class="calendar-dialog__form">
+          <h2 class="calendar-dialog__title">여행 일정 등록</h2>
+          <p class="calendar-dialog__description">
+            일정에 따른 날씨 예보 및 여행 정보를 알려드려요!
+          </p>
+
+          <div class="calendar-dialog__calendar-wrapper">
+            <!-- 7월 -->
+            <div class="calendar-dialog__each-month">
+              <div class="calendar-dialog__month-header">
+                <button
+                  tabindex="1"
+                  type="button"
+                  class="calendar-dialog__prev-button"
+                  data-action="prev"
+                  aria-label="이전 달로 이동"
+                >
+                  <svg
+                    aria-hidden="true"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8.9375 2.93008L8.41191 2.4375L4.0625 6.5L8.41191 10.5625L8.9375 10.0725L5.11621 6.5L8.9375 2.93008Z"
+                      fill="#A4A9AC"
+                    />
+                  </svg>
+                </button>
+                <span class="calendar-dialog__current-month-year"
+                  >2025년 7월</span
+                >
+              </div>
+              <!-- 요일 헤더 -->
+              <div class="calendar-dialog__days">
+                <span>일</span>
+                <span>월</span>
+                <span>화</span>
+                <span>수</span>
+                <span>목</span>
+                <span>금</span>
+                <span>토</span>
+              </div>
+              <!-- 날짜 -->
+              <div class="calendar-dialog__dates" id="calendarDates">
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+              </div>
+            </div>
+            <!-- 8월 -->
+            <div class="calendar-dialog__each-month">
+              <div class="calendar-dialog__month-header">
+                <span class="calendar-dialog__current-month-year"
+                  >2025년 8월</span
+                >
+                <button
+                  tabindex="2"
+                  type="button"
+                  class="calendar-dialog__next-button"
+                  data-action="next"
+                  aria-label="다음 달로 이동"
+                >
+                  <svg
+                    aria-hidden="true"
+                    width="13"
+                    height="13"
+                    viewBox="0 0 13 13"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M4.0625 2.93008L4.58809 2.4375L8.9375 6.5L4.58809 10.5625L4.0625 10.0725L7.88379 6.5L4.0625 2.93008Z"
+                      fill="#181818"
+                    />
+                  </svg>
+                </button>
+              </div>
+              <!-- 요일 헤더 -->
+              <div class="calendar-dialog__days">
+                <span>일</span>
+                <span>월</span>
+                <span>화</span>
+                <span>수</span>
+                <span>목</span>
+                <span>금</span>
+                <span>토</span>
+              </div>
+              <!-- 날짜 -->
+              <div class="calendar-dialog__dates" id="calendarDates">
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+                <button type="button" class="calendar-dialog__date">1</button>
+              </div>
+            </div>
+          </div>
+          <div class="calendar-dialog__buttons">
+            <button type="submit" class="calendar-dialog__next">다음</button>
+            <button type="button" class="calendar-dialog__close">닫기</button>
+          </div>
+        </form>
+      </dialog>
+
       <!-- 일정이 있을 경우 렌더링될 리스트 -->
       <ul class="schedule__list" id="scheduleList">
         <!-- JS로 아래 구조가 반복 삽입될 예정 -->
