feat : 날씨 컴포넌트 호출 및 index.html 배치

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
         </div>
         <ul class="schedule__day-list"></ul>
       </section>
+      <article class="weather-card" aria-labelledby="weather-title">
+        <header id="weather-now" aria-label="현재 날씨">
+          <h3 id="weather-title" class="sr-only">현재 날씨 및 예보</h3>
+          <p class="city">지역 찾는 중...</p>
+          <p class="temp">--°</p>
+        </header>
+
+        <section class="forecast" aria-label="3일간의 날씨 예보">
+          날씨 불러오는 중...
+        </section>
+      </article>
     </main>
   </body>
 </html>
