feat : 체크리스트 컴포넌트 호출 및 index.html 배치

--- a/index.html
+++ b/index.html
@@ -250,6 +250,35 @@
           </div>
         </div>
       </article>
+      <section class="checklist">
+        <div class="checklist__header">
+          <h2 class="checklist__title">출국 전 체크리스트</h2>
+          <div class="checklist__show-all">
+            <a
+              href="#"
+              class="checklist__show-all-btn"
+              aria-label="전체 항목 보기"
+            >
+              Show All
+              <svg
+                class="checklist__show-all-icon"
+                aria-hidden="true"
+                width="15"
+                height="15"
+                viewBox="0 0 15 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M4.6875 3.38086L5.29395 2.8125L10.3125 7.5L5.29395 12.1875L4.6875 11.6221L9.09668 7.5L4.6875 3.38086Z"
+                  fill="black"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+        <ul class="checklist__list"></ul>
+      </section>
     </main>
   </body>
 </html>
