feat : 일정 페이지 지역 선택 모달 및 캘린더 모달 구현
- 도시 입력 시 자동 매칭 기능 추가
- 해당 월 이전은 비활성화 처리
- 다음 달 이후 계속 렌더링 가능하도록 구현

--- a/src/pages/schedule-page/schedule-page.html
+++ b/src/pages/schedule-page/schedule-page.html
@@ -107,7 +107,6 @@
                   >
                     <path
                       d="M8.9375 2.93008L8.41191 2.4375L4.0625 6.5L8.41191 10.5625L8.9375 10.0725L5.11621 6.5L8.9375 2.93008Z"
-                      fill="#A4A9AC"
                     />
                   </svg>
                 </button>
@@ -126,20 +125,7 @@
                 <span>토</span>
               </div>
               <!-- 날짜 -->
-              <div class="calendar-dialog__dates" id="calendarDates">
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-              </div>
+              <div class="calendar-dialog__dates" id="calendarDates-1"></div>
             </div>
             <!-- 8월 -->
             <div class="calendar-dialog__each-month">
@@ -180,25 +166,14 @@
                 <span>토</span>
               </div>
               <!-- 날짜 -->
-              <div class="calendar-dialog__dates" id="calendarDates">
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
-                <button type="button" class="calendar-dialog__date">1</button>
+              <div class="calendar-dialog__dates" id="calendarDates-2">
                 <button type="button" class="calendar-dialog__date">1</button>
               </div>
             </div>
           </div>
           <div class="calendar-dialog__buttons">
             <button type="submit" class="calendar-dialog__next">다음</button>
-            <button type="button" class="calendar-dialog__close">닫기</button>
+            <button type="button" class="calendar-dialog__prev">이전</button>
           </div>
         </form>
       </dialog>
