--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
     />
     <link rel="stylesheet" href="./src/styles/main.css" />
+    <link rel="stylesheet" href="./src/components/account/account.css" />
     <script type="module" src="./src/js/main.js"></script>
     <title>넷플렉스</title>
   </head>
@@ -555,7 +556,7 @@
               <details>
                 <summary>
                   <span class="account__change-units--svg-button">
-                    <span class="sr-only">통화 단위 변경</span>
+                    <p class="sr-only">통화 단위 변경</p>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
