style : 가계부 페이지 css - 가계부 페이지   입력폼내 input을 싸고 있는 div class 이름 수정   전체적인 css 코드 작성

--- a/src/pages/account-page/account-page.html
+++ b/src/pages/account-page/account-page.html
@@ -39,15 +39,15 @@
       
       <!-- 입력폼 -->
       <form class="account__register--form">
-        <div>
+        <div class="account__register-cost">
           <label for="accountDate">날짜</label>
           <input type="date" id="accountDate" value="2025-07-31">
         </div>
-        <div>
+        <div class="account__register-cost">
           <label for="accountItems">항목</label>
           <input type="text" id="accountItems" placeholder="예시 교통비 🚌">
         </div>
-        <div>
+        <div class="account__register-cost">
           <label for="accountCost">금액</label>
           <input type="number" id="accountCost" placeholder="1000" min="0">
         </div>
