--- a/index.html
+++ b/index.html
@@ -9,14 +9,256 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
     />
     <link rel="stylesheet" href="./src/styles/main.css" />
-    <link rel="stylesheet" href="./src/components/account/account.css" />
     <script type="module" src="./src/js/main.js"></script>
     <title>넷플렉스</title>
   </head>
   <body>
     <div class="page-layout">
       <main class="main-layout">
-        <h2 class="sr-only">홈페이지</h2>
+        <h2 class="main-title">HOME</h2>
+        <section class="suggest-section">
+          <h3 class="sr-only">추천 배너</h3>
+          <div class="slide__button--wrapper">
+            <button
+              type="button"
+              class="slide__button slide__button--prev"
+              aria-label="이전 보기"
+            >
+              <svg
+                width="18"
+                height="42"
+                viewBox="0 0 18 42"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                role="none"
+              >
+                <path
+                  d="M2.54881 22.1842C2.04033 22.8382 1.21592 22.8382 0.70746 22.1842C0.199001 21.5302 0.199033 20.4699 0.70746 19.8158L15.3586 0.970985C15.867 0.316963 16.6914 0.316963 17.1999 0.970985C17.7084 1.62501 17.7084 2.68539 17.1999 3.33941L2.54881 22.1842Z"
+                  fill="#fafafa"
+                />
+                <path
+                  d="M0.586899 22.5529C0.0784716 21.8989 0.0784396 20.8385 0.586899 20.1845C1.09536 19.5305 1.91977 19.5305 2.42825 20.1845L17.0793 39.0293C17.5878 39.6833 17.5878 40.7437 17.0793 41.3977C16.5709 42.0518 15.7465 42.0518 15.238 41.3977L0.586899 22.5529Z"
+                  fill="#fafafa"
+                />
+              </svg>
+            </button>
+            <button
+              type="button"
+              class="slide__button slide__button--next"
+              aria-label="다음 보기"
+            >
+              <svg
+                width="18"
+                height="42"
+                viewBox="0 0 18 42"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                role="none"
+              >
+                <path
+                  d="M15.0322 20.1844C15.5407 19.5304 16.3651 19.5304 16.8736 20.1844C17.3821 20.8384 17.382 21.8988 16.8736 22.5528L2.2225 41.3977C1.71403 42.0517 0.889628 42.0517 0.381153 41.3977C-0.127322 40.7436 -0.127322 39.6833 0.381153 39.0292L15.0322 20.1844Z"
+                  fill="#fafafa"
+                />
+                <path
+                  d="M16.9942 19.8158C17.5026 20.4698 17.5026 21.5302 16.9942 22.1842C16.4857 22.8382 15.6613 22.8381 15.1528 22.1842L0.501718 3.33933C-0.00675693 2.68531 -0.00675684 1.62493 0.501718 0.970908C1.01019 0.316886 1.8346 0.316886 2.34307 0.970908L16.9942 19.8158Z"
+                  fill="#fafafa"
+                />
+              </svg>
+            </button>
+          </div>
+          <div class="suggest__banner">
+            <ul class="suggest__list">
+              <li class="suggest__list--item">
+                <figure>
+                  <picture class="suggest__images">
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/london_1x.avif 1x,
+                        ./src/assets/images/suggest/london_2x.avif 2x
+                      "
+                      type="image/avif"
+                    />
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/london_1x.webp 1x,
+                        ./src/assets/images/suggest/london_2x.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      src="./src/assets/images/suggest/london_1x.jpg"
+                      srcset="./src/assets/images/suggest/london_2x.jpg 2x"
+                      alt="런던"
+                      loading="lazy"
+                      decoding="async"
+                    />
+                  </picture>
+                  <figcaption class="suggest__info">
+                    <strong class="suggest__title">LONDON</strong>
+                    <div class="suggest__button--wrapper">
+                      <a
+                        href="#"
+                        class="suggest__button"
+                        aria-hidden="false"
+                        tabindex="0"
+                        >보기</a
+                      >
+                      <button
+                        type="button"
+                        class="suggest__button"
+                        aria-hidden="false"
+                        tabindex="0"
+                      >
+                        추가
+                      </button>
+                    </div>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="suggest__list--item">
+                <figure>
+                  <picture class="suggest__images">
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/tokyo_1x.avif 1x,
+                        ./src/assets/images/suggest/tokyo_2x.avif 2x
+                      "
+                      type="image/avif"
+                    />
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/tokyo_1x.webp 1x,
+                        ./src/assets/images/suggest/tokyo_2x.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      src="./src/assets/images/suggest/tokyo_1x.jpg"
+                      srcset="./src/assets/images/suggest/tokyo_2x.jpg 2x"
+                      alt="도쿄"
+                      loading="lazy"
+                      decoding="async"
+                    />
+                  </picture>
+                  <figcaption class="suggest__info">
+                    <strong class="suggest__title">TOKYO</strong>
+                    <div class="suggest__button--wrapper">
+                      <a
+                        href="#"
+                        class="suggest__button"
+                        aria-hidden="true"
+                        tabindex="-1"
+                        >보기</a
+                      >
+                      <button
+                        type="button"
+                        class="suggest__button"
+                        aria-hidden="true"
+                        tabindex="-1"
+                      >
+                        추가
+                      </button>
+                    </div>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="suggest__list--item">
+                <figure>
+                  <picture class="suggest__images">
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/ny_1x.avif 1x,
+                        ./src/assets/images/suggest/ny_2x.avif 2x
+                      "
+                      type="image/avif"
+                    />
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/ny_1x.webp 1x,
+                        ./src/assets/images/suggest/ny_2x.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      src="./src/assets/images/suggest/ny_1x.jpg"
+                      srcset="./src/assets/images/suggest/ny_2x.jpg 2x"
+                      alt="뉴욕"
+                      loading="lazy"
+                      decoding="async"
+                    />
+                  </picture>
+                  <figcaption class="suggest__info">
+                    <strong class="suggest__title">NEW YORK</strong>
+                    <div class="suggest__button--wrapper">
+                      <a
+                        href="#"
+                        class="suggest__button"
+                        aria-hidden="true"
+                        tabindex="-1"
+                        >보기</a
+                      >
+                      <button
+                        type="button"
+                        class="suggest__button"
+                        aria-hidden="true"
+                        tabindex="-1"
+                      >
+                        추가
+                      </button>
+                    </div>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="suggest__list--item">
+                <figure>
+                  <picture class="suggest__images">
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/paris_1x.avif 1x,
+                        ./src/assets/images/suggest/paris_2x.avif 2x
+                      "
+                      type="image/avif"
+                    />
+                    <source
+                      srcset="
+                        ./src/assets/images/suggest/paris_1x.webp 1x,
+                        ./src/assets/images/suggest/paris_2x.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      src="./src/assets/images/suggest/paris_1x.jpg"
+                      srcset="./src/assets/images/suggest/paris_2x.jpg 2x"
+                      alt="파리"
+                      loading="lazy"
+                      decoding="async"
+                    />
+                  </picture>
+                  <figcaption class="suggest__info">
+                    <strong class="suggest__title">PARIS</strong>
+                    <div class="suggest__button--wrapper">
+                      <a
+                        href="#"
+                        class="suggest__button"
+                        aria-hidden="true"
+                        tabindex="-1"
+                        >보기</a
+                      >
+                      <button
+                        type="button"
+                        class="suggest__button"
+                        aria-hidden="true"
+                        tabindex="-1"
+                      >
+                        추가
+                      </button>
+                    </div>
+                  </figcaption>
+                </figure>
+              </li>
+            </ul>
+          </div>
+        </section>
         <section class="schedule">
           <div class="schedule__header">
             <h3 class="schedule__title">My 일정</h3>
