--- a/index.html
+++ b/index.html
@@ -795,6 +795,7 @@
           <div class="account__show-total--Container">
             <div class="account__show--wrapper">
               <h4>총 지출</h4>
+
               <details>
                 <summary>
                   <span class="sr-only">통화단위 선택</span>
@@ -824,42 +825,71 @@
                 </ul>
               </details>
             </div>
+
             <div class="account__total-cost--wrapper">
               <h4>1,289,045 <span>원</span></h4>
             </div>
           </div>
 
-          <div class="account__register--container">
-            <div class="account__register--costRow">
-              <label for="accountItems">항목</label>
-              <input
-                type="text"
-                id="accountItems"
-                placeholder="예시 교통비 🚌"
-              />
+          <form class="account__register--form">
+            <div class="account__register--inputs-container">
+              <div class="account__register-cost">
+                <label for="accountDate">날짜</label>
+                <input type="date" id="accountDate" value="2025-07-31" />
+              </div>
+              <div class="account__register-cost">
+                <label for="accountItems">항목</label>
+                <input
+                  type="text"
+                  id="accountItems"
+                  placeholder="예시 교통비 🚌"
+                />
+              </div>
+              <div class="account__register-cost">
+                <label for="accountCost">금액</label>
+                <input
+                  type="number"
+                  id="accountCost"
+                  placeholder="1000"
+                  min="0"
+                />
+              </div>
             </div>
-            <div class="account__register--costRow">
-              <label for="accountCost">금액</label>
-              <input
-                type="number"
-                id="accountCost"
-                placeholder="1000"
-                min="0"
-              />
+
+            <div class="account__register--btns-container">
+              <fieldset class="account__payment-form">
+                <legend class="sr-only">결제 수단</legend>
+                <input
+                  type="radio"
+                  id="card"
+                  name="payment"
+                  value="카드"
+                  checked
+                />
+                <label for="card">카드</label>
+                <input type="radio" id="cash" name="payment" value="현금" />
+                <label for="cash">현금</label>
+              </fieldset>
+
+              <button type="submit" class="account__register--button">
+                등록
+              </button>
             </div>
-            <button class="account__register--button">등록</button>
-          </div>
+          </form>
 
           <div class="account__output-table">
             <table>
-              <tr>
-                <td class="account__date">날짜</td>
-                <td class="account__cost">금액</td>
-                <td class="account__title">항목</td>
-                <td class="account__method">수단</td>
-                <td class="account__modify">수정</td>
-                <td class="account__delete">삭제</td>
-              </tr>
+              <thead>
+                <tr>
+                  <th>날짜</th>
+                  <th>금액</th>
+                  <th>항목</th>
+                  <th>수단</th>
+                  <th>수정</th>
+                  <th>삭제</th>
+                </tr>
+              </thead>
+              <tbody class="account__output-body"></tbody>
             </table>
           </div>
         </section>
