--- a/src/pages/account-page/account-page.html
+++ b/src/pages/account-page/account-page.html
@@ -8,7 +8,6 @@
     <script type="module" src="./account-page.js"></script>
   </head>
   <body>
-
     <section class="account">
       <h3>가계부</h3>
       <div class="account__show-total--Container">
@@ -16,50 +15,64 @@
         <div class="account__show--wrapper">
           <h4>총 지출</h4>
           <!-- 통화단위 선택 버튼 -->
-          <details >
+          <details>
             <summary>
-              <span class="sr-only" >통화단위 선택</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="22" viewBox="0 0 24 22" fill="none">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0624 1.22023e-06H11.9376C10.8594 -3.0587e-05 9.96036 -5.17592e-05 9.24662 0.0847251C8.49328 0.17422 7.81312 0.371075 7.26655 0.853983C6.71999 1.33689 6.49718 1.93784 6.39589 2.60344C6.32711 3.0555 6.30764 4.1365 6.30215 5.06335C3.87545 5.13338 2.41843 5.38367 1.40588 6.27829C1.19209e-07 7.52045 0 9.51969 0 13.5181C0 17.5165 1.19209e-07 19.5157 1.40588 20.7578C2.81177 22 5.07451 22 9.59998 22H14.4C18.9254 22 21.1883 22 22.5941 20.7578C24 19.5157 24 17.5165 24 13.5181C24 9.51969 24 7.52045 22.5941 6.27829C21.5815 5.38367 20.1246 5.13338 17.6978 5.06335C17.6923 4.1365 17.6729 3.0555 17.6041 2.60344C17.5028 1.93784 17.28 1.33689 16.7334 0.853983C16.1869 0.371075 15.5068 0.17422 14.7534 0.0847251C14.0396 -5.17592e-05 13.1406 -3.0587e-05 12.0624 1.22023e-06ZM15.8975 5.03814C15.8921 4.14049 15.8748 3.17444 15.8202 2.81536C15.7457 2.3261 15.617 2.11671 15.4607 1.97854C15.3043 1.84037 15.0673 1.72669 14.5135 1.66091C13.9339 1.59206 13.1568 1.59036 12 1.59036C10.8432 1.59036 10.0661 1.59206 9.48647 1.66091C8.93272 1.72669 8.69573 1.84037 8.53934 1.97854C8.38296 2.11671 8.2543 2.3261 8.17985 2.81536C8.1252 3.17444 8.10793 4.14049 8.1025 5.03814C8.5722 5.03615 9.07062 5.03615 9.6 5.03615H14.4C14.9294 5.03615 15.4278 5.03615 15.8975 5.03814ZM12 8.48193C12.497 8.48193 12.9 8.83795 12.9 9.27711V9.28792C14.2066 9.57875 15.3 10.489 15.3 11.751C15.3 12.1901 14.897 12.5461 14.4 12.5461C13.903 12.5461 13.5 12.1901 13.5 11.751C13.5 11.3438 12.989 10.7792 12 10.7792C11.011 10.7792 10.5 11.3438 10.5 11.751C10.5 12.1582 11.011 12.7229 12 12.7229C13.6619 12.7229 15.3 13.7405 15.3 15.2852C15.3 16.5472 14.2066 17.4574 12.9 17.7482V17.759C12.9 18.1982 12.497 18.5542 12 18.5542C11.503 18.5542 11.1 18.1982 11.1 17.759V17.7482C9.79344 17.4574 8.7 16.5472 8.7 15.2852C8.7 14.846 9.10295 14.49 9.6 14.49C10.097 14.49 10.5 14.846 10.5 15.2852C10.5 15.6923 11.011 16.257 12 16.257C12.989 16.257 13.5 15.6923 13.5 15.2852C13.5 14.8779 12.989 14.3133 12 14.3133C10.3381 14.3133 8.7 13.2957 8.7 11.751C8.7 10.489 9.79344 9.57875 11.1 9.28792V9.27711C11.1 8.83795 11.503 8.48193 12 8.48193Z" fill="#FAFAFA"/>
+              <span class="sr-only">통화단위 선택</span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="22"
+                viewBox="0 0 24 22"
+                fill="none"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M12.0624 1.22023e-06H11.9376C10.8594 -3.0587e-05 9.96036 -5.17592e-05 9.24662 0.0847251C8.49328 0.17422 7.81312 0.371075 7.26655 0.853983C6.71999 1.33689 6.49718 1.93784 6.39589 2.60344C6.32711 3.0555 6.30764 4.1365 6.30215 5.06335C3.87545 5.13338 2.41843 5.38367 1.40588 6.27829C1.19209e-07 7.52045 0 9.51969 0 13.5181C0 17.5165 1.19209e-07 19.5157 1.40588 20.7578C2.81177 22 5.07451 22 9.59998 22H14.4C18.9254 22 21.1883 22 22.5941 20.7578C24 19.5157 24 17.5165 24 13.5181C24 9.51969 24 7.52045 22.5941 6.27829C21.5815 5.38367 20.1246 5.13338 17.6978 5.06335C17.6923 4.1365 17.6729 3.0555 17.6041 2.60344C17.5028 1.93784 17.28 1.33689 16.7334 0.853983C16.1869 0.371075 15.5068 0.17422 14.7534 0.0847251C14.0396 -5.17592e-05 13.1406 -3.0587e-05 12.0624 1.22023e-06ZM15.8975 5.03814C15.8921 4.14049 15.8748 3.17444 15.8202 2.81536C15.7457 2.3261 15.617 2.11671 15.4607 1.97854C15.3043 1.84037 15.0673 1.72669 14.5135 1.66091C13.9339 1.59206 13.1568 1.59036 12 1.59036C10.8432 1.59036 10.0661 1.59206 9.48647 1.66091C8.93272 1.72669 8.69573 1.84037 8.53934 1.97854C8.38296 2.11671 8.2543 2.3261 8.17985 2.81536C8.1252 3.17444 8.10793 4.14049 8.1025 5.03814C8.5722 5.03615 9.07062 5.03615 9.6 5.03615H14.4C14.9294 5.03615 15.4278 5.03615 15.8975 5.03814ZM12 8.48193C12.497 8.48193 12.9 8.83795 12.9 9.27711V9.28792C14.2066 9.57875 15.3 10.489 15.3 11.751C15.3 12.1901 14.897 12.5461 14.4 12.5461C13.903 12.5461 13.5 12.1901 13.5 11.751C13.5 11.3438 12.989 10.7792 12 10.7792C11.011 10.7792 10.5 11.3438 10.5 11.751C10.5 12.1582 11.011 12.7229 12 12.7229C13.6619 12.7229 15.3 13.7405 15.3 15.2852C15.3 16.5472 14.2066 17.4574 12.9 17.7482V17.759C12.9 18.1982 12.497 18.5542 12 18.5542C11.503 18.5542 11.1 18.1982 11.1 17.759V17.7482C9.79344 17.4574 8.7 16.5472 8.7 15.2852C8.7 14.846 9.10295 14.49 9.6 14.49C10.097 14.49 10.5 14.846 10.5 15.2852C10.5 15.6923 11.011 16.257 12 16.257C12.989 16.257 13.5 15.6923 13.5 15.2852C13.5 14.8779 12.989 14.3133 12 14.3133C10.3381 14.3133 8.7 13.2957 8.7 11.751C8.7 10.489 9.79344 9.57875 11.1 9.28792V9.27711C11.1 8.83795 11.503 8.48193 12 8.48193Z"
+                  fill="#FAFAFA"
+                />
               </svg>
             </summary>
-            <ul class="account__change-units--list" aria-label="통화단위 리스트">
+            <ul
+              class="account__change-units--list"
+              aria-label="통화단위 리스트"
+            >
               <li><button class="button">KRW</button></li>
               <li><button class="button">ERU</button></li>
               <li><button class="button">USD</button></li>
               <li><button class="button">JPY</button></li>
             </ul>
           </details>
-       </div>
+        </div>
         <!-- 총 금액 표시 -->
         <div class="account__total-cost--wrapper">
-           <h4>1,289,045 <span>원</span></h4>
+          <h4>1,289,045 <span>원</span></h4>
         </div>
       </div>
-      
+
       <!-- 입력폼 -->
       <form class="account__register--form">
         <div class="account__register--inputs-container">
           <div class="account__register-cost">
             <label for="accountDate">날짜</label>
-            <input type="date" id="accountDate" value="2025-07-31">
+            <input type="date" id="accountDate" value="2025-07-31" />
           </div>
           <div class="account__register-cost">
             <label for="accountItems">항목</label>
-            <input type="text" id="accountItems" placeholder="예시 교통비 🚌">
+            <input type="text" id="accountItems" placeholder="예시 교통비 🚌" />
           </div>
           <div class="account__register-cost">
             <label for="accountCost">금액</label>
-            <input type="number" id="accountCost" placeholder="1000" min="0">
+            <input type="number" id="accountCost" placeholder="1000" min="0" />
           </div>
         </div>
 
         <div class="account__register--btns-container">
           <fieldset class="account__payment-form">
             <legend class="sr-only">결제 수단</legend>
-            <input type="radio" id="card" name="payment" value="카드" checked>
+            <input type="radio" id="card" name="payment" value="카드" checked />
             <label for="card">카드</label>
-            <input type="radio" id="cash" name="payment" value="현금">
+            <input type="radio" id="cash" name="payment" value="현금" />
             <label for="cash">현금</label>
           </fieldset>
           <!-- 등록버튼 -->
@@ -81,11 +94,10 @@
             </tr>
           </thead>
           <tbody class="account__output-body">
-          <!-- JS로 항목 삽입 -->
+            <!-- JS로 항목 삽입 -->
           </tbody>
         </table>
-      </div>  
+      </div>
     </section>
-  
   </body>
 </html>
