--- a/index.html
+++ b/index.html
@@ -793,9 +793,10 @@
         <section class="account">
           <h3>가계부</h3>
           <div class="account__show-total--Container">
+            <!-- 총지출 표시 -->
             <div class="account__show--wrapper">
               <h4>총 지출</h4>
-
+              <!-- 통화단위 선택 버튼 -->
               <details>
                 <summary>
                   <span class="sr-only">통화단위 선택</span>
@@ -825,12 +826,13 @@
                 </ul>
               </details>
             </div>
-
+            <!-- 총 금액 표시 -->
             <div class="account__total-cost--wrapper">
               <h4>1,289,045 <span>원</span></h4>
             </div>
           </div>
 
+          <!-- 입력폼 -->
           <form class="account__register--form">
             <div class="account__register--inputs-container">
               <div class="account__register-cost">
@@ -870,13 +872,14 @@
                 <input type="radio" id="cash" name="payment" value="현금" />
                 <label for="cash">현금</label>
               </fieldset>
-
+              <!-- 등록버튼 -->
               <button type="submit" class="account__register--button">
                 등록
               </button>
             </div>
           </form>
 
+          <!-- 내역확인 테이블 -->
           <div class="account__output-table">
             <table>
               <thead>
@@ -889,7 +892,9 @@
                   <th>삭제</th>
                 </tr>
               </thead>
-              <tbody class="account__output-body"></tbody>
+              <tbody class="account__output-body">
+                <!-- JS로 항목 삽입 -->
+              </tbody>
             </table>
           </div>
         </section>
