refactor : loading="lazy" > "eager"변환

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
                       src="./src/assets/images/suggest/london_1x.jpg"
                       srcset="./src/assets/images/suggest/london_2x.jpg 2x"
                       alt="런던"
-                      loading="lazy"
+                      width="1300"
+                      height="700"
+                      loading="eager"
                       decoding="async"
                     />
                   </picture>
@@ -136,7 +138,9 @@
                       src="./src/assets/images/suggest/tokyo_1x.jpg"
                       srcset="./src/assets/images/suggest/tokyo_2x.jpg 2x"
                       alt="도쿄"
-                      loading="lazy"
+                      width="1300"
+                      height="700"
+                      loading="eager"
                       decoding="async"
                     />
                   </picture>
@@ -183,7 +187,9 @@
                       src="./src/assets/images/suggest/ny_1x.jpg"
                       srcset="./src/assets/images/suggest/ny_2x.jpg 2x"
                       alt="뉴욕"
-                      loading="lazy"
+                      width="1300"
+                      height="700"
+                      loading="eager"
                       decoding="async"
                     />
                   </picture>
@@ -230,7 +236,9 @@
                       src="./src/assets/images/suggest/paris_1x.jpg"
                       srcset="./src/assets/images/suggest/paris_2x.jpg 2x"
                       alt="파리"
-                      loading="lazy"
+                      width="1300"
+                      height="700"
+                      loading="eager"
                       decoding="async"
                     />
                   </picture>
