--- a/src/pages/account-page/account-page.html
+++ b/src/pages/account-page/account-page.html
@@ -11,10 +11,8 @@
     <section class="account">
       <h3>가계부</h3>
       <div class="account__show-total--Container">
-        <!-- 총지출 표시 -->
         <div class="account__show--wrapper">
           <h4>총 지출</h4>
-          <!-- 통화단위 선택 버튼 -->
           <details>
             <summary>
               <span class="sr-only">통화단위 선택</span>
@@ -44,13 +42,11 @@
             </ul>
           </details>
         </div>
-        <!-- 총 금액 표시 -->
         <div class="account__total-cost--wrapper">
-          <h4>1,289,045 <span>원</span></h4>
+          <h4>0s<span>원</span></h4>
         </div>
       </div>
 
-      <!-- 입력폼 -->
       <form class="account__register--form">
         <div class="account__register--inputs-container">
           <div class="account__register-cost">
@@ -75,12 +71,9 @@
             <input type="radio" id="cash" name="payment" value="현금" />
             <label for="cash">현금</label>
           </fieldset>
-          <!-- 등록버튼 -->
           <button type="submit" class="account__register--button">등록</button>
         </div>
       </form>
-
-      <!-- 내역확인 테이블 -->
       <div class="account__output-table">
         <table>
           <thead>
@@ -93,9 +86,7 @@
               <th>삭제</th>
             </tr>
           </thead>
-          <tbody class="account__output-body">
-            <!-- JS로 항목 삽입 -->
-          </tbody>
+          <tbody class="account__output-body"></tbody>
         </table>
       </div>
     </section>
